testdata/fixtures/models/negative/non_model_context.js
// model-looking literal, but the identifier is not a model call site —
// must never fire a wall of false positives on arbitrary strings
const description = "gpt5-turbo-hallucinated";
